--- a/paper.tex
+++ b/paper.tex
@@ -1,17 +1,25 @@
-\input{settings/header.tex}
+\documentclass[a4paper,11pt]{article}
+
+\usepackage[T1]{fontenc}
+\usepackage[english]{babel}
+\usepackage{epsfig}
+\usepackage{graphicx}
+\usepackage{color}
+\bibliographystyle{plain}
 
 \begin{document}
 
 \title{Status report about charge instability}
 
+\maketitle 
 
-\newcommand{\MPIStutt}{\affiliation{Max-Planck-Institute for Solid State Research, 70569 Stuttgart, Germany}}
+%\newcommand{\MPIStutt}{\affiliation{Max-Planck-Institute for Solid State Research, 70569 Stuttgart, Germany}}
 
-\author{Demetrio Vilardi }   \MPIStutt 
+%\author{Demetrio Vilardi }   \MPIStutt 
 
-\author{Ciro Taranto} 		 \MPIStutt
+%\author{Ciro Taranto} 		 \MPIStutt
 
-\author{Walter Metzner }     \MPIStutt 
+%\author{Walter Metzner }     \MPIStutt 
 
 
 
