[Perpendicular] Added perpendicular ladders plots: Charge channel and PH Bubble

--- a/content/frgnoself.tex
+++ b/content/frgnoself.tex
@@ -15,6 +15,7 @@ Besides the vertex, we have computed the susceptibilities, whose divergences fol
 \item In all the calculations in this section we did not include any self-energy feedback. The calculation of the self-energy, with a full frequency dependence vertex  is ongoing work, and needs more testing. Some results are presented in the following paragraphs. 
  
 If not otherwise specified we measure energies in units of $D=4t$, i.e., $t'=0.1$ corresponds to $t'=0.4t$.
+\end{itemize} 
  
 \subparagraph{Results} 
 
