--- a/paper.tex
+++ b/paper.tex
@@ -5,6 +5,7 @@
 \usepackage{epsfig}
 \usepackage{graphicx}
 \usepackage{color}
+\usepackage{amsmath}
 \bibliographystyle{plain}
 
 \begin{document}
@@ -46,9 +47,9 @@ On the other hand the \emph{divergence} of this structure may be very sensitive 
 %\label{sec:dmf2rgself}
   %\input{content/dmf2rgself.tex}
 
-%\section{Perpendicular ladders}				
-%\label{sec:perpendciular}
-  %\input{content/perpendicular.tex}
+\section{Perpendicular ladders}				
+\label{sec:perpendciular}
+\input{content/perpendicular.tex}
 
 %\section{Self-energy in fRG}				
 %\label{sec:frgself}
