--- a/content/frgnoself.tex
+++ b/content/frgnoself.tex
@@ -23,21 +23,11 @@ In Fig \ref{phasediag_van_hove} and \ref{phasediag_van_hove_plus} we show  a put
 The fininte temperature acts as a cutoff for divergencies in the bare bubble. 
 
 \begin{figure}
-\includegraphics[scale=0.8]{vanHove_scan_critical_lambda_phi.eps}
+\includegraphics[scale=0.5]{vanHove_scan_critical_lambda_phi.eps}
 \caption{Critical scale in full frequency fRG (interaction cutoff) as a function of the nearest neighbors hopping and for van Hove filling. The color of the symbol indicates the kind of instability that is realized.  } \label{phasediag_van_hove}
 
 \end{figure}
 
-\begin{figure}
-\includegraphics[scale=0.8]{vanHove_plus_scan_critical_lambda_phi.eps}
-\caption{Critical scale in full frequency fRG (interaction cutoff) as a function of the nearest neighbors hopping and for van Hove filling + 7 \% . The color of the symbol indicates the kind of instability that is realized.} 
-\label{phasediag_van_hove_plus} 
-\end{figure}
-
-In the spirit of the "interaction cutoff" the critical scale can be associated with the maximal value of the interaction $U_{\mathrm{flow}}\approx(1-\Lambda)^2 U$ \textbf{check if there is the square} for which the flow would converge. 
-In a purely weak coupling scenario one can assume a monothonic relation between the interaction value and the critical temperature, and hence we can qualitatively associate the critical scale whith a critical temperature. In this sense our results are consistent with those reported in the literature. 
-
-We hava double-checked the consistency of our results by also considering a frequency selective cuffoff, which substitutes: $i\omega \rightarrow i\mathrm{sign} \omega \sqrt{\omega^2+\Lambda^2}$. 
 
 \begin{figure}
 \includegraphics[scale=0.25]{images/vanhovelam.png}
@@ -46,9 +36,39 @@ We hava double-checked the consistency of our results by also considering a freq
 \label{lamvan} 
 \end{figure}
 
+
+\begin{figure}
+\includegraphics[scale=0.5]{images/vanHove_scan_critical_lambda_phiSTATIC.eps}
+\caption{Critical scale in static fRG (interaction cutoff) as a function of the nearest neighbors hopping and for van Hove filling. The color of the symbol indicates the kind of instability that is realized.} 
+\label{phasediag_van_hoveSTATIC} 
+\end{figure}
+
+
+\begin{figure}
+\includegraphics[scale=0.25]{images/static.png}
+\caption{Flow of the maximum of the absolute value of each channel for different values of $t'$ and at van Hove filling, in the static approximation for the vertex.
+} 
+\label{lamstatic} 
+\end{figure}
+
+
+\begin{figure}
+\includegraphics[scale=0.5]{vanHove_plus_scan_critical_lambda_phi.eps}
+\caption{Critical scale in full frequency fRG (interaction cutoff) as a function of the nearest neighbors hopping and for van Hove filling + 7 \%. The color of the symbol indicates the kind of instability that is realized.} 
+\label{phasediag_van_hove_plus} 
+\end{figure}
+
+
+
+
+In the spirit of the "interaction cutoff" the critical scale can be associated with the maximal value of the interaction $U_{\mathrm{flow}}\approx(1-\Lambda)^2 U$ \textbf{check if there is the square} for which the flow would converge. 
+In a purely weak coupling scenario one can assume a monothonic relation between the interaction value and the critical temperature, and hence we can qualitatively associate the critical scale whith a critical temperature. In this sense our results are consistent with those reported in the literature. 
+
+We hava double-checked the consistency of our results by also considering a frequency selective cuffoff, which substitutes: $i\omega \rightarrow i\mathrm{sign} \omega \sqrt{\omega^2+\Lambda^2}$. 
+
 \begin{figure}
 \includegraphics[scale=0.25]{images/freqvanhove.png}
-\caption{Flow of the maximum of the absolute value of each channel for differnt values of $t'$ and at van Hove filling. } 
+\caption{\textbf{frequency cutoff} Flow of the maximum of the absolute value of each channel for differnt values of $t'$ and at van Hove filling. } 
 \label{freqlam} 
 \end{figure}
 
@@ -63,13 +83,28 @@ We hava double-checked the consistency of our results by also considering a freq
 
 We call \textit{charge instability problem} the divergence of the charge component of the vertex for a finite bosonic frequency transfer, i.e. $\Omega_{ph} = 2\pi/\beta$, as already reported in the literature by Husemann \emph{et al}. 
 \begin{itemize}
-\item The charge channel diverges for a region of filling/next neighbors hopping between iAF and FM. In static fRG in this region one can find $d$wave superconductivity, usually at much lower scales. 
+\item The charge channel diverges for a region of filling/next neighbors hopping between iAF and FM. In static fRG in this region one can find $d$wave superconductivity, usually at much lower scales (see Figs. \ref{phasediag_van_hove}, \ref{phasediag_van_hove_plus}, \ref{phasediag_van_hoveSTATIC}).
+
+\item The divergence of the charge channel seems to appear at the transition between iAF and FM instabilities. In the "phase diagram" the charge divergence line seems to be continued by the FM line. 
+ 
 \item The \textit{divergence} of the channel is associated with a very specific \textit{frequency-structure}. The frequency-structure can be explained (section about perpendicular ladders), it's divergence instead is unphysical. 
+The frequency structure of the magnetic channel is rather flat, which can be interpreted in terms of RPA terms, with very little effect from other channels. 
+ 
+ \item The divergence in the charge channel is very localized in frequency space. 
+Nevertheless, it is sufficient to induce large values of the charge susceptibility,  with a maximum at finite frequency transfer. The magnetic susceptibility is anyway larger due to the flat frequency structure of the magnetic vertex. 
+ 
 \item The charge-channel divergence arises also in DMF$^2$RG, where the DMFT self-energy is already included in the flow equations. 
+
 \item Introducing a \emph{full} self-energy feedback the in DMF$^2$RG the problem seems to be suppressed. 
+
 \item Similar observations in fRG, with major approximations on the self energy feedback.
-\item The divergence is very localized in frequency space. Nevertheless it is sufficient to induce large values of the charge susceptibility, with a maximum at finite frequency transfer.    
+
+     
 \end{itemize} 
  
-\textbf{Here include some color plots of the charge channel vs magnetic channel}
-
+\begin{figure}
+\includegraphics[scale=0.25]{images/Merged_tpri0105.png}
+\caption{Frequency structure of the channels. Top left: magnetic channel for momentum closet to $\pi,\pi$ where the vertex has a local maximum, top right: magnetic channel for momentum close to $0,0$, in both cases external frequency transfer $\Omega=0$. 
+Bottom left: charge channel for external frequency transfer $\Omega=0$ and transfer momentum $0,0$, bottom right: the same but for \emph{finite} frequency transfer $\Omega = 2\pi/\beta$. } 
+\label{structurechargefrg} 
+\end{figure}
