[Self energy in fRG] Added se vs no_se and Fermi occupation plots

--- a/content/frgself.tex
+++ b/content/frgself.tex
@@ -1,12 +1,22 @@
-Insert some text here. 
-\begin{equation}
-\label{sdmft}
-a = a ;  
-\end{equation}
+\begin{itemize}
 
+\item Self energy inclusion suppresses the charge channel in favor of FM fluctuations
+
+\item Self energy lowers the critical scale
+
+\end{itemize}
 
 \begin{figure}
-\includegraphics[scale=0.5]{vanHove_scan_critical_lambda_phi.eps}
-\caption{Diagrammatic elements used in the text. The Yukawa coupling already refers to the case of spin boson. For a density boson there is a plus sign. } \label{dictionary}
-
-\end{figure}
+\includegraphics[scale=0.5]{images/sevsnose.png}
+\caption{Max values of the channels as functions of cutoff scale, with and without self energy. }
+ \end{figure}
+ 
+ \begin{figure}
+ \includegraphics[scale=0.5]{images/Fermi_occupation_nose.png}
+ \caption{Non interacting Fermi occupation in the BZ. }
+ \end{figure}
+ 
+  \begin{figure}
+ \includegraphics[scale=0.5]{images/Fermi_occupation_se.png}
+ \caption{Interacting Fermi occupation in the BZ. }
+ \end{figure}
