--- a/paper.tex
+++ b/paper.tex
@@ -39,6 +39,10 @@ On the other hand the \emph{divergence} of this structure may be very sensitive 
 \label{sec:frgnoself}
   \input{content/frgnoself.tex}
 
+\section{Self-energy in fRG}				
+\label{sec:frgself}
+\input{content/frgself.tex}
+
 %\section{DMF$^2$RG without self-energy}	
 %\label{sec:dmf2rgnoself}
   %\input{content/dmf2rgnoself.tex}
@@ -51,9 +55,6 @@ On the other hand the \emph{divergence} of this structure may be very sensitive 
 \label{sec:perpendciular}
 \input{content/perpendicular.tex}
 
-%\section{Self-energy in fRG}				
-%\label{sec:frgself}
-  %\input{content/frgself.tex}
 
   \bibliography{refs}
 
