--- a/content/frgnoself.tex
+++ b/content/frgnoself.tex
@@ -14,7 +14,7 @@ Besides the vertex, we have computed the susceptibilities, whose divergences fol
 
 \item In all the calculations in this section we did not include any self-energy feedback. The calculation of the self-energy, with a full frequency dependence vertex  is ongoing work, and needs more testing. Some results are presented in the following paragraphs. 
  
-If not otherwise specified we measure energies in units of $D=4t$, i.e., $t'=0.1$ corresponds to $t'=0.4t$.
+If not otherwise specified we measure energies in units of $D=4t$, i.e., $t'=-0.1$ corresponds to $t'=-0.4t$.
 \end{itemize} 
  
 \subparagraph{Results} 
@@ -61,8 +61,7 @@ The fininte temperature acts as a cutoff for divergencies in the bare bubble.
 
 
 
-
-In the spirit of the "interaction cutoff" the critical scale can be associated with the maximal value of the interaction $U_{\mathrm{flow}}\approx(1-\Lambda)^2 U$ \textbf{check if there is the square} for which the flow would converge. 
+In the spirit of the "interaction cutoff" the critical scale can be associated with the maximal value of the interaction $U_{\mathrm{flow}}\approx(1-\Lambda)^2 U$  for which the flow would converge. 
 In a purely weak coupling scenario one can assume a monothonic relation between the interaction value and the critical temperature, and hence we can qualitatively associate the critical scale whith a critical temperature. In this sense our results are consistent with those reported in the literature. 
 
 We hava double-checked the consistency of our results by also considering a frequency selective cuffoff, which substitutes: $i\omega \rightarrow i\mathrm{sign} \omega \sqrt{\omega^2+\Lambda^2}$. 
