--- a/paper.tex
+++ b/paper.tex
@@ -28,7 +28,7 @@
 
 We collect some results obtained by means of different implementations of fRG equations using a full frequency dependent vertex. 
 It emerges a very peaked structure in the charge-channel for finite frequency-transfer, that in some region of the parameter space becomes divergent. Such a divergence has no obvious physical interpretation.  
-The peaked structure seems to be characteristic of the frequency dependence of the vertex, as it is shown by means of simpled diagrams. 
+The peaked structure seems to be characteristic of the frequency dependence of the vertex, as it is shown by means of simple diagrams. 
 On the other hand the \emph{divergence} of this structure may be very sensitive to the detailed structure of the Green's function used in the calculation, i.e., very sensitive to the use, or not, of dressed propagators, even when the correction to the self-energy appear to be small (i.e., self-energy Fermi liquid-like).  
 
 \end{abstract}
@@ -39,13 +39,9 @@ On the other hand the \emph{divergence} of this structure may be very sensitive 
 \label{sec:frgnoself}
   \input{content/frgnoself.tex}
 
-%\section{DMF$^2$RG without self-energy}	
-%\label{sec:dmf2rgnoself}
-  %\input{content/dmf2rgnoself.tex}
-
-%\section{DMF$^2$RG with self-energy}	
-%\label{sec:dmf2rgself}
-  %\input{content/dmf2rgself.tex}
+\section{DMF$^2$RG }	
+\label{sec:dmf2rgnoself}
+\input{content/dmf2rgnoself.tex}
 
 \section{Perpendicular ladders}				
 \label{sec:perpendciular}
