pushing to origin

--- a/content/dmf2rgnoself.tex
+++ b/content/dmf2rgnoself.tex
@@ -2,6 +2,8 @@ In this section we present results obtained with DMF$^2$RG.  We use an interpola
 Apart for this, the implementation is equivalent to the one used in fRG, i.e., same frequency and momentum treatments. 
 The self-energy is however better-behaved, compared to the fRG situation: we speculate that this is a consequence of the fact that the flow only has to compute the deviation from the DMFT self-energy. Hence the results with the self energy feedback of this section are numerically more stable.  
 
+The results presented here are (in the usual fRG units) for $U=6.8t$, $T=-0.08t$, filling $n=0.85$, and next neighbors hopping $t'=-0.03$.  
+
 
 \begin{figure}
 \includegraphics[scale=0.5]{vanHove_scan_critical_lambda_phi.eps}
