--- a/refs.bib
+++ b/refs.bib
@@ -2388,6 +2388,21 @@
   Timestamp                = {2016.06.20}
 }
 
+@article{Husemann2012,
+  title = {Frequency-dependent vertex functions of the ($t,{t}^{\ensuremath{'}}$) Hubbard model at weak coupling},
+  author = {Husemann, C. and Giering, K.-U. and Salmhofer, M.},
+  journal = {Phys. Rev. B},
+  volume = {85},
+  issue = {7},
+  pages = {075121},
+  numpages = {17},
+  year = {2012},
+  month = {Feb},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevB.85.075121},
+  url = {https://link.aps.org/doi/10.1103/PhysRevB.85.075121}
+}
+
 @Article{Imada1998,
   Title                    = {{Metal-insulator transitions}},
   Author                   = {{Imada}, M. and {Fujimori}, A. and {Tokura}, Y.},
